--- a/react-ems-frontend/src/components/Navbar/styles/Event.css
+++ b/react-ems-frontend/src/components/Navbar/styles/Event.css
@@ -1,4 +1,5 @@
-.eventsimg th{padding-left:100px
+.eventsimg th{padding-left:100px;color:black
 }
 .events{text-align:center;font-size:50px;margin-top:0px}
+.eventsimg img{height:200px;width:380px}
 
