--- a/react-ems-frontend/src/components/Navbar/styles/Event.css
+++ b/react-ems-frontend/src/components/Navbar/styles/Event.css
@@ -1,5 +1,5 @@
-.eventsimg th{padding-left:100px;color:black
+.eventsimg th{padding-left:30px;color:black;
 }
-.events{text-align:center;font-size:50px;margin-top:0px}
-.eventsimg img{height:200px;width:380px}
+.events{text-align:center;font-size:50px}
+.eventsimg img{height:330px;width:415px;padding-top:40px}
 
