--- a/style.css
+++ b/style.css
@@ -7,27 +7,43 @@
 body
 {
 	 
-	background-image:url("party1.jpg");
+	background-image:url("../images/img.jpg");
 	 width: 100%;
 	 height: 100%;
 	 background-repeat: no-repeat; 
 	 background-size: cover;
+	 font-family: sans-serif;
+	 
 }
 
 h1
 {
 	text-align:center;
-	color:white;
-	
+	color:black;
+	font-family:"Garamond", Times, Serif;
 	padding  :15px;
+	
 }
+form
+{
+	border-color:black;  
+	border-width: .25em;  
+	border-style: double; 
+	padding: 16px 20px;  
+	margin: 8px 0;   
+	width: 50%;  
+}
+
+
+
+
 .weddingregestration
 {
 	margin:auto;
 	width:50%;
 	text-align:center;
 	color:white;
-	
+
 	border: 2px solid white;
 	padding:15px;
 }
@@ -38,7 +54,7 @@ h1
   margin: 8px 0;  
   border: none;  
   cursor: pointer;  
-  width: 100%;  
+  width: 30%;  
    opacity: 0.9;  
 }  
 .registerbtn:hover {  
