--- a/react-ems-frontend/src/style.css
+++ b/react-ems-frontend/src/style.css
@@ -1,13 +1,13 @@
-*
+/* *
 {
 	margin: 0;
 	padding:0;
-}
+} */
 
-body
+.breg
 {
 	 
-	background-image:url("../images/img.jpg");
+	background-image:url("./images/img.jpg");
 	 width: 100%;
 	 height: 100%;
 	 background-repeat: no-repeat; 
@@ -16,7 +16,7 @@ body
 	 
 }
 
-h1
+#hreg
 {
 	text-align:center;
 	color:black;
@@ -24,7 +24,7 @@ h1
 	padding  :15px;
 	
 }
-form
+.fhreg
 {
 	border-color:black;  
 	border-width: .25em;  
