--- a/react-ems-frontend/src/SignUpStyle.css
+++ b/react-ems-frontend/src/SignUpStyle.css
@@ -1,4 +1,4 @@
-body{
+.rsign{
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
@@ -29,8 +29,7 @@ background-color:  black;
 border-radius:25px;
 margin-bottom: 120px;
 }
-input[type="text"],
-input[type="password"]
+.input
 {  
 	display: block;
 	box-sizing: border-box;
@@ -142,7 +141,7 @@ button.social
 border: collapse;
 
 }
-h1{
+.heading{
 	color: white;
 	font-family:"Garamond", Times, Serif;
     margin-top: 0;
