--- a/react-ems-frontend/src/components/Navbar/styles/Navbar.css
+++ b/react-ems-frontend/src/components/Navbar/styles/Navbar.css
@@ -10,7 +10,7 @@
 .navbar-logo {
   /* color: #fff; */
   margin-left: 20px;
-  align-items: baseline;
+  align-items: top;
   cursor: pointer;
 }
 
@@ -42,11 +42,11 @@
   padding: 0.5rem 1rem;
 }
 
-.nav-links:hover {
+/* .nav-links:hover {
   background-color: #1888ff;
   border-radius: 4px;
   transition: all 0.2s ease-out;
-}
+} */
 
 .fa-bars {
   color: rgb(0, 0, 0);
